# pytfce

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
paper/: paper.bib  paper.md
src/pytfce/: __init__.py  config.py  r_ptfce_pipeline.R
src/pytfce/core/: __init__.py  etfce.py  grf.py  ptfce_baseline.py  ptfce_etfce.py  ptfce_exact.py  smoothness.py  tfce.py
src/pytfce/utils/: __init__.py  metrics.py  phantoms.py  plotting.py  tui.py
tests/: conftest.py  test_grf.py  test_ptfce.py  test_smoothness.py  test_tfce.py
