[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytfce"
version = "0.1.1"
description = "Fast probabilistic Threshold-Free Cluster Enhancement in Python"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Don Yin", email = "dy323@cam.ac.uk"},
    {name = "Hao Chen", email = "hc666@cam.ac.uk"},
]
keywords = ["neuroimaging", "TFCE", "pTFCE", "VBM", "statistics", "GRF"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy",
    "scipy",
    "connected-components-3d",
]

[project.optional-dependencies]
plotting = ["matplotlib"]
tui = ["rich"]
all = ["matplotlib", "rich"]
test = ["pytest"]

[project.urls]
Homepage = "https://github.com/Don-Yin/pytfce"
Repository = "https://github.com/Don-Yin/pytfce"
Issues = "https://github.com/Don-Yin/pytfce/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pytfce = ["*.R"]
